fix: 26.1 Migration fallout - Code Style - Code style fixes